[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zompi"
version = "0.1.2"
description = "Un generatore di documentazione Python-centrico con temi modulari"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "DomeniGeco" }
]

dependencies = [
    "markdown>=3.5"
]

[project.scripts]
zompi = "zompi.cli:main"

[project.urls]
Homepage = "https://utiteam-zompi.fandom.com/it/wiki/Zompi_Wiki"
Source = "https://github.com/utiteam-python/zompi"
Issues = "https://github.com/utiteam-python/zompi/issues"
Documentation = "https://utiteam-python.github.io/docs/zompi_docs/"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["zompi*"]
